Segundo commit aplicando bootstrap y pseudocodigos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link del bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link del css-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Contacto</title>
@@ -29,45 +32,63 @@
 
     <!-- Inicio del contenido-->
     <main>
+        
         <section class="contact">
             <h1>CONTACTO</h1>
-            <form action="">
-                <div>
-                    <label for="name">Nombre:</label>
-                    <input type="text" name="name" id="name" placeholder="Ingrese su nombre">
+            <form class="row g-3 m-3 mx-auto my-4">
+                <div class="col-md-5 mx-auto my-2">
+                    <label for="inputnombre" class="form-label">Nombre:</label>
+                    <input type="nombre" class="form-control" id="inputnombre" placeholder="Escribe tu nombre">
                 </div>
-                <div>
-                    <label for="email">Email:</label>
-                    <input type="text" name="email" id="email" placeholder="Ingrese su email">
+                <div class="col-md-5 mx-auto my-2">
+                    <label for="inputapellido" class="form-label">Apellido:</label>
+                    <input type="apellido" class="form-control" id="inputapellido"  placeholder="Escribe tu apellido">
                 </div>
-                <div>
-                    <label for="massage">Mensaje:</label>
-                    <textarea name="message" id="message" cols="30" rows="10"
-                        placeholder="Ingrese su mensaje"></textarea>
+                <div class="col-md-7 mx-auto my-2">
+                    <label for="inputEmail" class="form-label">Email:</label>
+                    <input type="Email" class="form-control" id="inputEmail"  placeholder="Escribe tu email">
                 </div>
-
-                <input type="reset" value="Cancelar"><input type="submit" value="Enviar">
+                <div class="col-md-7 mx-auto my-2">
+                    <label for="inputMensaje" class="form-label">Mensaje:</label>
+                    <textarea class="form-control" id="inputMensaje" rows="4" placeholder="Escribe un mensaje"></textarea>
+                </div>
+                <div class="col-12">
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
+                <div class="col-12">
+                    <button type="reset" class="btn btn-primary">Cancelar</button>
+                </div>
             </form>
-
+            
             <h2>Ubicación</h2>
 
             <div class="contact-ubicacion">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d4628.719366319156!2d-56.156431096386854!3d-34.88137513615105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e3!4m5!1s0x959f80f7343f801f%3A0x955dc65b78c5d02e!2sAv.%208%20de%20Octubre%203066-3110%2C%2011600%20Montevideo%2C%20Departamento%20de%20Montevideo!3m2!1d-34.8826326!2d-56.153538299999994!4m5!1s0x959f80f7360e5673%3A0xb55e616127a21196!2sAv.%208%20de%20Octubre%203066%2C%2011600%20Montevideo%2C%20Departamento%20de%20Montevideo!3m2!1d-34.8828769!2d-56.1536644!5e0!3m2!1ses-419!2suy!4v1703375639875!5m2!1ses-419!2suy"
                     width="500" height="350" style="border:0;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <h3>Dirección</h3>
-                <p> Av. 8 de Octubre 3066 <br> Montevideo, Uruguay</p>
-                <h3>Horario</h3>
-                <p>Lunes a Viernes: 9:00 a 12:30 y de 13.30 a 18:00 hrs.</p>
-                <h3>Teléfono</h3>
-                <p>+598 2618 0000</p>
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+            </div>
+
+            <div class="contact-info">
+                <div>
+                    <h3>Dirección</h3>
+                    <p>Av. 8 de Octubre 3066 <br> Montevideo, Uruguay</p>
+                </div>
+                <div>
+                    <h3>Horario</h3>
+                    <p>Lunes a Viernes: 9:00 a 12:30 y de 13.30 a 18:00 hrs.</p>
+                </div>
+                <div>
+                    <h3>Teléfono</h3>
+                    <p>+598 2618 0000</p>
+                </div>
             </div>
         </section>
 
         <div>
             <a href="https://web.whatsapp.com/" target="_blank"><img class="wsp" src="../assets/images/whatsapp.png"
-                    alt="Whatsapp logo"></a>
+                    alt="Logo de Whatsapp"></a>
         </div>
     </main>
     <!-- Cierre del contenido-->
@@ -75,9 +96,20 @@
     <!-- Inicio del footer-->
     <footer>
         <p>© 2023 Estética Automotriz. Todos los derechos reservados.</p>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><img class="facebook" src="../assets/images/facebooklogo.png" alt="Logo de Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="../assets/images/instagramlogo.png"
+                    alt="Logo de Instagram"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img class="twitter" src="../assets/images/twitterlogo.png"
+                    alt="Logo de Twitter"></a>
+        </div>
     </footer>
     <!-- Fin del footer-->
-
+    <!-- script de bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
