--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link del bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link del css-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Promociones</title>
@@ -30,8 +33,8 @@
     <!-- Inicio del contenido-->
     <main>
         <div>
-        <h1>PROMOCIONES</h1>
-        <img src="../assets/images/promociones.jpg" alt="Auto Recien salido de Estetica Automotriz">
+            <h1>PROMOCIONES</h1>
+            <img class="auto" src="../assets/images/promociones.jpg" alt="Auto Recien salido de Estetica Automotriz">
         </div>
         <section class="grid">
             <article class="box promocion-1">
@@ -128,9 +131,20 @@
     <!-- Inicio del footer-->
     <footer>
         <p>© 2023 Estética Automotriz. Todos los derechos reservados.</p>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><img class="facebook" src="../assets/images/facebooklogo.png" alt="Logo de Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="../assets/images/instagramlogo.png"
+                    alt="Logo de Instagram"></a>
+            <a href="https://twitter.com/?lang=es" target="_blank"><img class="twitter" src="../assets/images/twitterlogo.png"
+                    alt="Logo de Twitter"></a>
+        </div>
     </footer>
     <!-- Fin del footer-->
-
+    <!-- script de bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
