--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link del bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link del css-->
     <link rel="stylesheet" href="css/style.css">
     <title>Estética Automotriz</title>
@@ -28,22 +31,65 @@
     <!-- Cierre del encabezado-->
 
     <!-- Inicio del contenido-->
-    <main class="index-conteiner">
+    <main class="index">
         <h1>ESTÉTICA AUTOMOTRIZ</h1>
-        <img class="car" src="assets/images/autolavado.jpg" alt="Lavado de auto blanco">
-        <div class="index-card">
-            <p>
-                Confia en nosotros y dejanos tu auto en nuestras manos para que quede reluciente!!.
-                <br>
-                Lo dejamos como nuevo utilizando productos totalmente ecológicos, y así cuidamos el medio ambiente.
-                <br>
-                Ofrecemos una amplia gama de servicios que incluyen desde lavado externo, limpieza interna y pulido de
-                faros, hasta limpieza integral de tapizados y limpieza de motor, entre otros.
-            </p>
-        </div>
+        <section id="carouselEsteticaAutomotriz" class="carousel ecowash">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/images/autolavado.jpg" class="w-50 h-50" alt="Lavado de auto blanco">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/automedioambiente.jpg" class="w-50 h-50" alt="Auto medio ambiente">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/detalladoautosnuevos.jpg" class="w-50 h-50" alt="Auto nuevo">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselEsteticaAutomotriz" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselEsteticaAutomotriz" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </section>
+        <section>
+            <article class="index-contain">
+                <p>
+                    Confia en nosotros y dejanos tu auto en nuestras manos para que quede reluciente!!.
+                    <br>
+                    Lo dejamos como nuevo utilizando productos totalmente ecológicos, y así cuidamos el medio ambiente.
+                    <br>
+                    Ofrecemos una amplia gama de servicios que incluyen desde lavado externo, limpieza interna y pulido de
+                    faros, hasta limpieza integral de tapizados y limpieza de motor, entre otros.
+                </p>
+            </article>
+            <div class="index-circles">
+                <div class="top-circles">
+                    <div class="index-circles-conteiner">
+                        <span>+1000 <br> Autos <br> Atendidos</span>
+                    </div>
+                    <div class="index-circles-conteiner">
+                        <span>+10 <br> Años <br> de Experiencia</span>
+                    </div>
+                    <div class="index-circles-conteiner">
+                        <span>Servicios <br> Ecológicos</span>
+                    </div>
+                </div>
+                <div class="bottom-circles">
+                    <div class="index-circles-conteiner">
+                        <span>Clientes <br> Satisfechos</span>
+                    </div>
+                    <div class="index-circles-conteiner">
+                        <span>Innovación <br> en Limpieza</span>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div>
             <a href="https://web.whatsapp.com/" target="_blank"><img class="wsp" src="assets/images/whatsapp.png"
-                    alt="Whatsapp logo"></a>
+                    alt="Logo de Whatsapp"></a>
         </div>
     </main>
     <!-- Cierre del contenido-->
@@ -51,9 +97,19 @@
     <!-- Inicio del footer-->
     <footer class="footer">
         <p>© 2023 Estética Automotriz. Todos los derechos reservados.</p>
+        <div>
+            <a href="https://www.facebook.com/" target="_blank"><img class="facebook" src="assets/images/facebooklogo.png" alt="Logo de Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="assets/images/instagramlogo.png" alt="Logo de Instagram"></a>
+            <a href="https://twitter.com/" target="_blank"><img class="twitter" src="assets/images/twitterlogo.png" alt="Logo de Twitter"></a>
+        </div>
     </footer>
     <!-- Fin del footer-->
 
+    <!-- script de bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
