--- a/index.html
+++ b/index.html
@@ -16,15 +16,44 @@
     <!-- Inicio del encabezado-->
     <header>
         <!-- Inicio del nav-->
-        <nav class="nav">
-            <div><img src="assets/images/logo.png" alt="Logo"></div>
-            <ul class="nav-list">
-                <li><a href="index.html" class="nav-link">Inicio</a></li>
-                <li><a href="pages/sobrenosotros.html" class="nav-link">Sobre Nosotros</a></li>
-                <li><a href="pages/servicios.html" class="nav-link">Servicios</a></li>
-                <li><a href="pages/promociones.html" class="nav-link">Promociones</a></li>
-                <li><a href="pages/contacto.html" class="nav-link">Contacto</a></li>
-            </ul>
+        <nav class="navbar bg-body-tertiary sticky-top navbar-expand-md navbar-dark bg-primary" data-bs-theme="dark">
+            <div class="container-fluid">
+                <div class="row align-items-center">
+                    <div class="col-6">
+                        <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Logo" width="100px"> <i class="bi bi-logo"></i></a>
+                    </div>
+                    <div class="col-6 ms-auto">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                    </div>
+                </div>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Ecowash</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/sobrenosotros.html">Sobre Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/servicios.html">Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="pages/promociones.html">Promociones</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link"  href="pages/contacto.html">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </nav>
         <!-- Cierre del nav-->
     </header>
@@ -67,21 +96,21 @@
             </article>
             <div class="index-circles">
                 <div class="top-circles">
-                    <div class="index-circles-conteiner">
+                    <div class="index-circles-container">
                         <span>+1000 <br> Autos <br> Atendidos</span>
                     </div>
-                    <div class="index-circles-conteiner">
+                    <div class="index-circles-container">
                         <span>+10 <br> Años <br> de Experiencia</span>
                     </div>
-                    <div class="index-circles-conteiner">
+                    <div class="index-circles-container">
                         <span>Servicios <br> Ecológicos</span>
                     </div>
                 </div>
                 <div class="bottom-circles">
-                    <div class="index-circles-conteiner">
+                    <div class="index-circles-container">
                         <span>Clientes <br> Satisfechos</span>
                     </div>
-                    <div class="index-circles-conteiner">
+                    <div class="index-circles-container">
                         <span>Innovación <br> en Limpieza</span>
                     </div>
                 </div>
