Se paso de css a scss usando npm

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Estética Automotriz</title>
 </head>
 
-<body class="body-index">
+<body>
     <!-- Inicio del encabezado-->
     <header>
         <!-- Inicio del nav-->
@@ -91,7 +91,7 @@
                     Lo dejamos como nuevo utilizando productos totalmente ecológicos, y así cuidamos el medio ambiente.
                     <br>
                     Ofrecemos una amplia gama de servicios que incluyen desde lavado externo, limpieza interna y pulido de
-                    faros, hasta limpieza integral de tapizados y limpieza de motor, entre otros.
+                    faros, hasta limpieza integral de tapizados y limpieza de motor.
                 </p>
             </article>
             <div class="index-circles">
