--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -12,7 +12,7 @@
     <title>Servicios</title>
 </head>
 
-<body class="body-servicios">
+<body>
     <!-- Inicio del encabezado-->
     <header>
         <!-- Inicio del nav-->
