--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -12,7 +12,7 @@
     <title>Sobre Nosotros</title>
 </head>
 
-<body class="body-about">
+<body>
     <!-- Inicio del encabezado-->
     <header>
         <!-- Inicio del nav-->
