--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -12,7 +12,7 @@
     <title>Promociones</title>
 </head>
 
-<body class="body-promociones">
+<body>
     <!-- Inicio del encabezado-->
     <header>
         <!-- Inicio del nav-->
@@ -68,7 +68,7 @@
         <section class="grid">
             <article class="box promocion-1">
                 <div>
-                    <h2>Paquete A $800</h2>
+                    <h2>Paquete A</h2>
                     <p>
                         Lavado exterior.
                         <br>
@@ -86,7 +86,7 @@
             </article>
             <article class="box promocion-2">
                 <div>
-                    <h2>Paquete B $1400</h2>
+                    <h2>Paquete B</h2>
                     <p>
                         Lavado exterior.
                         <br>
@@ -107,7 +107,7 @@
             </article>
             <article class="box promocion-3">
                 <div>
-                    <h2>Paquete C $1600</h2>
+                    <h2>Paquete C</h2>
                     <p>
                         Lavado exterior.
                         <br>
