--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,33 +66,33 @@
             <h1>CONTACTO</h1>
             <form class="row g-3 m-3 mx-auto my-4">
                 <div class="col-md-7 mx-auto my-2">
-                    <label for="inputnombre" class="form-label">Nombre:</label>
+                    <label for="inputnombre" class="form-label fw-bold">Nombre:</label>
                     <input type="nombre" class="form-control" id="inputnombre" placeholder="Escribe tu nombre">
                 </div>
                 <div class="col-md-7 mx-auto my-2">
-                    <label for="inputapellido" class="form-label">Apellido:</label>
+                    <label for="inputapellido" class="form-label fw-bold">Apellido:</label>
                     <input type="apellido" class="form-control" id="inputapellido"  placeholder="Escribe tu apellido">
                 </div>
                 <div class="col-md-7 mx-auto my-2">
-                    <label for="inputEmail" class="form-label">Email:</label>
+                    <label for="inputEmail" class="form-label fw-bold">Email:</label>
                     <input type="Email" class="form-control" id="inputEmail"  placeholder="Escribe tu email">
                 </div>
                 <div class="col-md-7 mx-auto my-2">
-                    <label for="inputMensaje" class="form-label">Mensaje:</label>
+                    <label for="inputMensaje" class="form-label fw-bold">Mensaje:</label>
                     <textarea class="form-control" id="inputMensaje" rows="4" placeholder="Escribe un mensaje"></textarea>
                 </div>
-                <div class="col-12">
-                    <button type="submit" class="btn btn-secondary">Enviar</button>
+                <div class="btn-container col-12">
+                    <button type="submit" class="btn-claro">Enviar</button>
                 </div>
-                <div class="col-12">
-                    <button type="reset" class="btn btn-secondary">Cancelar</button>
+                <div class="btn-container col-12">
+                    <button type="reset" class="btn-grisceleste">Cancelar</button>
                 </div>
             </form>
             
             <h2>Ubicación</h2>
 
             <div class="contact-ubicacion">
-                <iframe
+                <iframe class= "maps"
                     src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d4628.719366319156!2d-56.156431096386854!3d-34.88137513615105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e3!4m5!1s0x959f80f7343f801f%3A0x955dc65b78c5d02e!2sAv.%208%20de%20Octubre%203066-3110%2C%2011600%20Montevideo%2C%20Departamento%20de%20Montevideo!3m2!1d-34.8826326!2d-56.153538299999994!4m5!1s0x959f80f7360e5673%3A0xb55e616127a21196!2sAv.%208%20de%20Octubre%203066%2C%2011600%20Montevideo%2C%20Departamento%20de%20Montevideo!3m2!1d-34.8828769!2d-56.1536644!5e0!3m2!1ses-419!2suy!4v1703375639875!5m2!1ses-419!2suy"
                     width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade">
