--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,6 +7,8 @@
     <!-- Link del bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- Link del animacion-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Link del css-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Servicios</title>
@@ -74,7 +76,7 @@
                     Se trata de un sistema innovador que no raya la pintura del auto.
                 </p>
             </div>
-            <div class="servicios-container-span">
+            <div class="animate__animated animate__pulse servicios-container-span">
                 <p>
                     <span>Conoce nuestros paquetes y elige el que mejor se ajuste a tus necesidades.
                         <br>
