Se realizo todo lo de SEO y se arreglaron ultimos detalles, aparte de cambiar el Readme

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Estética Automotriz</title>
+    <meta name="title" content="Estética automotriz">
+    <meta name="keywords" content="estética automotriz ecowash, lavadero de autos, lavado de auto ecológico, estética automotriz ecológico, lavadero de auto uruguay, estética automotriz montevideo">
+    <meta name="description" content="Dejamos tu auto reluciente y como nuevo en Ecowash, con productos de alta calidad y todos ecológicos cuidando el medio ambiente.">
     <!-- Link del bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link del css-->
     <link rel="stylesheet" href="css/style.css">
-    <title>Estética Automotriz</title>
 </head>
 
 <body>
@@ -20,15 +23,19 @@
             <div class="container-fluid">
                 <div class="row align-items-center">
                     <div class="col-6">
-                        <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Logo" width="100px"> <i class="bi bi-logo"></i></a>
+                        <a class="navbar-brand" href="index.html"><img src="assets/images/logo.png" alt="Logo"
+                                width="100px"> <i class="bi bi-logo"></i></a>
                     </div>
                     <div class="col-6 ms-auto">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar"
+                            aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                     </div>
                 </div>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Ecowash</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -48,7 +55,7 @@
                                 <a class="nav-link" href="pages/promociones.html">Promociones</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link"  href="pages/contacto.html">Contacto</a>
+                                <a class="nav-link" href="pages/contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -74,11 +81,13 @@
                     <img src="assets/images/detalladoautosnuevos.jpg" class="w-50 h-50" alt="Auto nuevo">
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselEsteticaAutomotriz" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselEsteticaAutomotriz"
+                data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselEsteticaAutomotriz" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselEsteticaAutomotriz"
+                data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
@@ -90,7 +99,8 @@
                     <br>
                     Lo dejamos como nuevo utilizando productos totalmente ecológicos, y así cuidamos el medio ambiente.
                     <br>
-                    Ofrecemos una amplia gama de servicios que incluyen desde lavado externo, limpieza interna y pulido de
+                    Ofrecemos una amplia gama de servicios que incluyen desde lavado externo, limpieza interna y pulido
+                    de
                     faros, hasta limpieza integral de tapizados y limpieza de motor.
                 </p>
             </article>
@@ -127,18 +137,20 @@
     <footer class="footer">
         <p>© 2023 Estética Automotriz. Todos los derechos reservados.</p>
         <div>
-            <a href="https://www.facebook.com/" target="_blank"><img class="facebook" src="assets/images/facebooklogo.png" alt="Logo de Facebook"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="assets/images/instagramlogo.png" alt="Logo de Instagram"></a>
-            <a href="https://twitter.com/" target="_blank"><img class="twitter" src="assets/images/twitterlogo.png" alt="Logo de Twitter"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img class="facebook"
+                    src="assets/images/facebooklogo.png" alt="Logo de Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img class="instagram"
+                    src="assets/images/instagramlogo.png" alt="Logo de Instagram"></a>
+            <a href="https://twitter.com/" target="_blank"><img class="twitter" src="assets/images/twitterlogo.png"
+                    alt="Logo de Twitter"></a>
         </div>
     </footer>
     <!-- Fin del footer-->
 
     <!-- script de bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous">
-    </script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
