--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto</title>
+    <meta name="title" content="Contacto y ubicación ecowash">
+    <meta name="keywords" content="contacto, ubicación, dirección, telefono, formulario, whatsapp, redes sociales">
+    <meta name="description" content="Ecowash esta ubicado en la calle Av. 8 de Octubre 3066, en Montevideo, Uruguay, por cualquier consulta podes ponerte en contacto con nosotros a través del formulario o por cualquier red social, telefono o whatsapp, siempre respondemos rápido.">
     <!-- Link del bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link del css-->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Contacto</title>
 </head>
 
 <body>
