--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Promociones</title>
+    <meta name="title" content="Promociones únicas que brinda ecowash">
+    <meta name="keywords" content="descuentos de lavados de vehiculos, ofertas de estética automotriz, clientes, promociones de lavado de autos">
+    <meta name="description" content="Te brindamos distintas opciones de promociones para tu beneficio, nos importan nuestros clientes y de esta forma cuidamos tu economía">
     <!-- Link del bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link del css-->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Promociones</title>
 </head>
 
 <body>
