--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Servicios</title>
+    <meta name="title" content="Servicios de ecowash">
+    <meta name="keywords" content="servicio lavado de auto interior, lavado de auto exterior, lavado express, lavado completo, lavado de auto ecológico">
+    <meta name="description" content="Conoce nuestros paquetes que ofrecemos para que tu auto quede limpio y elige el que mejor se ajuste a tus necesidades.">
     <!-- Link del bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -11,7 +15,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- Link del css-->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Servicios</title>
 </head>
 
 <body>
@@ -65,7 +68,7 @@
     <main>
         <section class="servicios">
             <h1>SERVICIOS</h1>
-            <img src="../assets/images/encerado.jpg" alt="Limpieza de autolavado">
+            <img class="servicio-auto" src="../assets/images/encerado.jpg" alt="Limpieza de autolavado">
             <div class="servicios-container">
                 <h2>¿Por qué es ecológico?</h2>
                 <p>
