--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre Nosotros</title>
+    <meta name="title" content="Sobre Nosotros Ecowash">
+    <meta name="keywords" content="empresa, ecowash, lavado ecológico de vehiculos">
+    <meta name="description" content="Ecowash es una empresa con más de 10 años de experiencia que se fundo en el 2012, que se dedica al lavado ecológico de vehículos.">
     <!-- Link del bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- Link del css-->
     <link rel="stylesheet" href="../css/style.css">
-    <title>Sobre Nosotros</title>
 </head>
 
 <body>
