Aplicando ultimos detalles

--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -157,6 +157,11 @@
                 <img src="../assets/images/automedioambiente.jpg" alt="Auto medio ambiente">
             </article>
         </section>
+        
+        <div>
+            <a href="https://web.whatsapp.com/" target="_blank"><img class="wsp" src="../assets/images/whatsapp.png"
+                    alt="Logo de Whatsapp"></a>
+        </div>
     </main>
     <!-- Cierre del contenido-->
 
