--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -193,6 +193,11 @@
                 </div>
             </article>
         </section>
+        
+        <div>
+            <a href="https://web.whatsapp.com/" target="_blank"><img class="wsp" src="../assets/images/whatsapp.png"
+                    alt="Logo de Whatsapp"></a>
+        </div>
     </main>
     <!-- Cierre del contenido-->
 
